# RockPaperScissorsServer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_and_run_linux.sh  build_and_run_windows.bat  conanfile.py  conanfile.txt  run_linux.sh  run_windows.bat
src/: CMakeLists.txt  Main.cpp
src/domain/: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.hpp  Room.cpp  Room.hpp  Server.cpp  Server.hpp
src/domain/command/: ConnectToRoomCommand.cpp  ConnectToRoomCommand.hpp  ConnectToRoomCommandHandler.cpp  ConnectToRoomCommandHandler.hpp  CreateRoomCommand.cpp  CreateRoomCommand.hpp  CreateRoomCommandHandler.cpp  CreateRoomCommandHandler.hpp  RegisterCommand.cpp  RegisterCommand.hpp  RegisterCommandHandler.cpp  RegisterCommandHandler.hpp
src/domain/entity/: Card.hpp  ClientCommandType.hpp  CommandType.hpp  Room.hpp  ServerCommandType.hpp  User.cpp  User.hpp  Uuid.hpp
src/domain/handler/: ConnectToRoom.cpp  ConnectToRoom.hpp  ConnectToRoomCommandHandler.cpp  ConnectToRoomCommandHandler.hpp  CreateRoom.cpp  CreateRoom.hpp  CreateRoomCommandHandler.cpp  CreateRoomCommandHandler.hpp  NominateCard.cpp  NominateCard.hpp  NominateCardCommandHandler.cpp  NominateCardCommandHandler.hpp  Register.cpp  Register.hpp  RegisterCommandHandler.cpp  RegisterCommandHandler.hpp  StartGame.cpp  StartGame.hpp  StartGameCommandHandler.cpp  StartGameCommandHandler.hpp
src/domain/handler/request/: ConnectToRoom.cpp  ConnectToRoom.hpp  CreateRoom.cpp  CreateRoom.hpp  NominateCard.cpp  NominateCard.hpp  Register.cpp  Register.hpp  StartGame.cpp  StartGame.hpp
src/domain/interface/: Command.hpp  CommandHandler.hpp  IUUIDGenerator.hpp  Pipeline.hpp  Room.hpp  RoomStorage.hpp  Timer.hpp  User.hpp  UserClient.hpp  UserConnection.hpp  UserStorage.hpp  UuidGenerator.hpp
src/domain/model/: Room.cpp  Room.hpp
src/domain/model/round_pipe/: ComputePlayerWinner.cpp  ComputePlayerWinner.hpp  ComputePlayerWinnerPipe.cpp  ComputePlayerWinnerPipe.hpp  DealMissingCards.cpp  DealMissingCards.hpp  DealMissingCardsPipe.cpp  DealMissingCardsPipe.hpp  ForceNominatePlayerCard.cpp  ForceNominatePlayerCard.hpp  ForceNominatePlayerCardPipe.cpp  ForceNominatePlayerCardPipe.hpp  RaisePlayerCard.cpp  RaisePlayerCard.hpp  RaisePlayerCardPipe.cpp  RaisePlayerCardPipe.hpp
src/domain/util/: Pipeline.hpp  Util.hpp
src/infrastructure/: CMakeLists.txt  RockPaperScissorsServer.cpp  RockPaperScissorsServer.hpp  Server.cpp  Server.hpp
src/infrastructure/client/: TcpSocketConnection.cpp  TcpSocketConnection.hpp  TcpSocketUserClient.cpp  TcpSocketUserClient.hpp  TcpSocketUserConnection.cpp  TcpSocketUserConnection.hpp
src/infrastructure/generator/: UUIDGenerator.cpp  UUIDGenerator.hpp  UuidGenerator.cpp  UuidGenerator.hpp
src/infrastructure/storage/: MemoryRoomStorage.cpp  MemoryRoomStorage.hpp  MemoryUserStorage.cpp  MemoryUserStorage.hpp
src/infrastructure/util/: QtTimer.cpp  QtTimer.hpp  Util.hpp
src/infrastructure/utils/: QtTimer.cpp  QtTimer.hpp
tests/unit/: CMakeLists.txt
tests/unit/fixture/: RoomFixture.hpp
tests/unit/fixture/command/: ConnectToRoomCommandFixture.hpp  CreateRoomCommandFixture.hpp  RegisterCommandFixture.hpp  StartGameCommandFixture.hpp
tests/unit/fixture/handler/: ConnectToRoomCommandFixture.hpp  ConnectToRoomTest.hpp  CreateRoomCommandFixture.hpp  CreateRoomTest.hpp  NominateCardCommandHandlerFixture.hpp  NominateCardTest.hpp  RegisterCommandFixture.hpp  RegisterTest.hpp  StartGameCommandFixture.hpp  StartGameTest.hpp
tests/unit/fixture/handler/request/: ConnectToRoomTest.hpp  CreateRoomTest.hpp  NominateCardTest.hpp  RegisterTest.hpp  StartGameTest.hpp
tests/unit/fixture/model/: RoomFixture.hpp  RoomTest.hpp
tests/unit/fixture/model/round_pipe/: ComputePlayerWinnerPipeFixture.hpp  ComputePlayerWinnerTest.hpp  DealMissingCardsPipeFixture.hpp  DealMissingCardsTest.hpp  ForceNominatePlayerCardPipeFixture.hpp  ForceNominatePlayerCardTest.hpp  RaisePlayerCardPipeFixture.hpp  RaisePlayerCardTest.hpp
tests/unit/mock/client/: ConnectionMock.hpp  UserClientMock.hpp
tests/unit/mock/model/: RoomMock.hpp
tests/unit/mock/storage/: RoomStorageMock.hpp  UserStorageMock.hpp
tests/unit/mock/util/: RoundPipelineMock.hpp
tests/unit/mock/utils/: TimerMock.hpp
tests/unit/src/: RoomTest.cpp
tests/unit/src/command/: ConnectToRoomCommandHandlerTest.cpp  ConnectToRoomCommandTest.cpp  CreateRoomCommandHandlerTest.cpp  CreateRoomCommandTest.cpp  RegisterCommandHandlerTest.cpp  RegisterCommandTest.cpp  StartGameCommandHandlerTest.cpp
tests/unit/src/handler/: ConnectToRoomCommandHandlerTest.cpp  ConnectToRoomTest.cpp  CreateRoomCommandHandlerTest.cpp  CreateRoomTest.cpp  NominateCardCommandHandlerTest.cpp  NominateCardTest.cpp  RegisterCommandHandlerTest.cpp  RegisterTest.cpp  StartGameCommandHandlerTest.cpp  StartGameTest.cpp
tests/unit/src/handler/request/: ConnectToRoomTest.cpp  CreateRoomTest.cpp  NominateCardTest.cpp  RegisterTest.cpp  StartGameTest.cpp
tests/unit/src/model/: RoomTest.cpp
tests/unit/src/model/round_pipe/: ComputePlayerWinnerPipeTest.cpp  ComputePlayerWinnerTest.cpp  DealMissingCardsPipeTest.cpp  DealMissingCardsTest.cpp  ForceNominatePlayerCardPipeTest.cpp  ForceNominatePlayerCardTest.cpp  RaisePlayerCardPipeTest.cpp  RaisePlayerCardTest.cpp
